--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.24.0",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
