--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "emailjs": "^4.0.3",
