--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
+    "react-slick": "^0.30.2",
+    "react-spring": "^9.7.3",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
